images in collapsedlistingviews now display correctly

--- a/public/stylesheets/css/main.css
+++ b/public/stylesheets/css/main.css
@@ -520,8 +520,7 @@ button#venmoButton {
 
 #picture {
   position: relative;
-  max-height: 100%;
-  margin-left: -25%; }
+  max-height: 100%; }
 
 #watchEye {
   position: absolute;
