--- a/public/stylesheets/scss/components/_feed.scss
+++ b/public/stylesheets/scss/components/_feed.scss
@@ -81,8 +81,6 @@ $collapsedListingHeight: 150px;
 #picture {
   position: relative;
   max-height:100%;
-  margin-left: -25%;
-
 }
 
 #watchEye {
